--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "ipfs-blob-store": "^1.1.2",
     "ipfs-repo": "^0.11.1",
     "lokijs": "^1.4.1",
-    "mocha": "^3.1.2"
+    "mocha": "^3.1.2",
+    "tmp": "0.0.30"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "main": "src/Adapter.js"
 }
