--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mocha": "^3.1.2",
     "tmp": "0.0.30"
   },
-  "dependencies": {},
+  "dependencies": {
+    "node-forge": "^0.6.45"
+  },
   "main": "src/Adapter.js"
 }
