--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha test/**/*Test.js"
   },
   "author": "Anders Bohlin (anders.bohlin@salientpoint.com)",
   "description": "LokiJS IPFS persistence adapter",
